--- a/criptoWallet/src/index.html
+++ b/criptoWallet/src/index.html
@@ -12,7 +12,9 @@
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
-    />
+      />
+      <!-- iconos bootstrap -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   </head>
   <body class="container text-bg-secondary p-3">
     <app-root></app-root>
